--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0" />
     <title>Block Destroyer</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +15,7 @@
         <div class="menu">
             <h1>Block Destroyer</h1>
             <button class="button">PLAY</button>
-            <p>Game made in HTML with canvas - <u>BekerDev</u></p>
+            <p>Game made in HTML with canvas - <a href="https://github.com/Beker06/Block_Destroyer" target="_blank">BekerDev</a></p>
         </div>
     </div>
     <script src="script.js"></script>
