--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <div class="menu">
             <h1>Block Destroyer</h1>
             <button class="button">PLAY</button>
+            
+        </div>
+        <div class="instruction">
+            <span>↑ to shoot</span>
             <p>Game made in HTML with canvas - <a href="https://github.com/Beker06/Block_Destroyer" target="_blank">BekerDev</a></p>
+            <span>V1.3.0</span>
         </div>
     </div>
     <script src="script.js"></script>
